--- a/404.html
+++ b/404.html
@@ -1,148 +1,175 @@
 <!DOCTYPE html>
 <html lang="th">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="TNI Cybersec" content="404" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="TNI Cybersec" content="404" />
+    <title>TNI Cybersec | 404 Page not found</title>
+    <meta name="description" content="404 Page not found" />
 
-  <title>TNI Cybersec | 404 Page not found</title>
-  <meta name="description" content="404 Page not found" />
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="/css/style.css" />
 
-  <!-- stylesheet -->
-  <link rel="stylesheet" href="css/style.css" />
+    <!-- bootstrap cdns -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+      crossorigin="anonymous"
+    />
 
-  <!-- bootstrap cdns -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
+    <!-- fontawesome cdns -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v6.1.1/css/all.css"
+    />
 
-  <!-- fontawesome cdns -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css" />
+    <!-- google fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Athiti:100,100i,300,300i,400,400i,500,500i,700,700i"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Mitr:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i"
+      rel="stylesheet"
+    />
 
-  <!-- google fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Athiti:100,100i,300,300i,400,400i,500,500i,700,700i"
-    rel="stylesheet" />
-  <link
-    href="https://fonts.googleapis.com/css?family=Mitr:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i"
-    rel="stylesheet" />
+    <!-- favicon -->
+    <link rel="shortcut icon" href="/img/TNICyberWebIcon.ico" />
+    <link rel="apple-touch-icon" href="/img/TNICyberWebIcon.ico" />
+    <link rel="manifest" href="/common/manifest.json" />
 
-  <!-- favicon -->
-  <link rel="shortcut icon" href="img/TNICyberWebIcon.ico" />
-  <link rel="apple-touch-icon" href="img/TNICyberWebIcon.ico">
-  <link rel="manifest" href="common/manifest.json" />
+    <!-- terminal effect -->
+    <script src="/js/t.min.js" defer></script>
 
-  <!-- terminal effect -->
-  <script src="js/t.min.js"></script>
+    <!-- for on scroll animations -->
+    <link rel="stylesheet" href="/css/animate.min.css" />
+    <script src="/js/wow.min.js" defer></script>
+  </head>
 
-  <!-- for on scroll animations -->
-  <link rel="stylesheet" href="css/animate.min.css" />
-  <script src="js/wow.min.js"></script>
-</head>
+  <body>
+    <!-- loader -->
+    <div id="loader"></div>
 
-<body>
-  <!-- loader -->
-  <div id="loader"></div>
+    <audio loop id="bgm">
+      <source src="/audio/NeverGonnaGiveYouUp.mp3" type="audio/mpeg" />
+      <!-- Your browser does not support the audio element. -->
+    </audio>
 
-  <audio loop id="bgm">
-    <source src="audio/NeverGonnaGiveYouUp.mp3" type="audio/mpeg" />
-    <!-- Your browser does not support the audio element. -->
-  </audio>
+    <div class="wrapper">
+      <!--------------- navbar starts here --------------->
+      <nav>
+        <span
+          id="brand"
+          class="circleScaleBtn2 logo user-select-none wow bounceIn"
+          data-wow-delay="0.6s"
+          onclick="location.href='index.html'"
+        >
+          <img
+            rel="preload"
+            as="image"
+            width="auto"
+            height="55"
+            src="/img/TNICyberWeb.png"
+          />
+        </span>
+      </nav>
+      <!--------------- navbar ends here --------------->
+      <div class="snowflakes" aria-hidden="true">
+        <div class="snowflake">❗</div>
+        <div class="snowflake">💔</div>
+        <div class="snowflake">💥</div>
+        <div class="snowflake">❗</div>
+        <div class="snowflake">💔</div>
+        <div class="snowflake">💥</div>
+        <div class="snowflake">❗</div>
+        <div class="snowflake">💔</div>
+        <div class="snowflake">💥</div>
+        <div class="snowflake">❗</div>
+        <div class="snowflake">💔</div>
+        <div class="snowflake">💥</div>
+      </div>
+      <!--------------- hero section starts here --------------->
 
-  <div class="wrapper">
-    <!--------------- navbar starts here --------------->
-    <nav>
-      <span id="brand" class="circleScaleBtn2 logo user-select-none wow bounceIn" data-wow-delay="0.6s"
-        onclick="location.href='index.html'">
-        <img rel="preload" as="image" width="auto" height="55" src="img/TNICyberWeb.png" />
-      </span>
-    </nav>
-    <!--------------- navbar ends here --------------->
-    <div class="snowflakes" aria-hidden="true">
-      <div class="snowflake">❗</div>
-      <div class="snowflake">💔</div>
-      <div class="snowflake">💥</div>
-      <div class="snowflake">❗</div>
-      <div class="snowflake">💔</div>
-      <div class="snowflake">💥</div>
-      <div class="snowflake">❗</div>
-      <div class="snowflake">💔</div>
-      <div class="snowflake">💥</div>
-      <div class="snowflake">❗</div>
-      <div class="snowflake">💔</div>
-      <div class="snowflake">💥</div>
-    </div>
-    <!--------------- hero section starts here --------------->
-
-    <div rel="preload" as="image" class="bgimg404 wow bounceIn">
-      <div class="hero user-select-none">
-        <div class="header">
-          <h1 class="wow bounceIn" data-wow-delay="0.1s">
-            <span class="rainbowText">404 Page not found!</span>
-          </h1>
-          <h3 class="wow bounceIn" data-wow-delay="0.2s">
-            <i class="fa-solid fa-hand-pointer"></i> Tap to
-            <span id="control-icon"><i class="fa-solid fa-play"></i> &
-              <i class="fa-solid fa-pause"></i></span>
-          </h3>
-          <h3 class="wow bounceIn" data-wow-delay="0.3s">
-            <i class="fa-solid fa-music"></i>
-            <i class="fa-solid fa-music"></i>
-            <i class="fa-solid fa-music"></i>
-          </h3>
-          <h6 class="wow bounceIn" data-wow-delay="0.4s">
-            Never gonna give you up
-          </h6>
-          <h6 class="wow bounceIn" data-wow-delay="0.5s">
-            Never gonna let you down
-          </h6>
-          <h6 class="wow bounceIn" data-wow-delay="0.6s">
-            Never gonna run around and desert you
-          </h6>
-          <h3 class="wow bounceIn" data-wow-delay="0.7s">
-            <i class="fa-solid fa-music"></i>
-            <i class="fa-solid fa-music"></i>
-            <i class="fa-solid fa-music"></i>
-          </h3>
-          <!-- <button onclick="playAudio()">play</button> -->
+      <div rel="preload" as="image" class="bgimg404 wow bounceIn">
+        <div class="hero user-select-none">
+          <div class="header">
+            <h1 class="wow bounceIn" data-wow-delay="0.1s">
+              <span class="rainbowText">404 Page not found!</span>
+            </h1>
+            <h3 class="wow bounceIn" data-wow-delay="0.2s">
+              <i class="fa-solid fa-hand-pointer"></i> Tap to
+              <span id="control-icon"
+                ><i class="fa-solid fa-play"></i> &
+                <i class="fa-solid fa-pause"></i
+              ></span>
+            </h3>
+            <h3 class="wow bounceIn" data-wow-delay="0.3s">
+              <i class="fa-solid fa-music"></i>
+              <i class="fa-solid fa-music"></i>
+              <i class="fa-solid fa-music"></i>
+            </h3>
+            <h6 class="wow bounceIn" data-wow-delay="0.4s">
+              Never gonna give you up
+            </h6>
+            <h6 class="wow bounceIn" data-wow-delay="0.5s">
+              Never gonna let you down
+            </h6>
+            <h6 class="wow bounceIn" data-wow-delay="0.6s">
+              Never gonna run around and desert you
+            </h6>
+            <h3 class="wow bounceIn" data-wow-delay="0.7s">
+              <i class="fa-solid fa-music"></i>
+              <i class="fa-solid fa-music"></i>
+              <i class="fa-solid fa-music"></i>
+            </h3>
+            <!-- <button onclick="playAudio()">play</button> -->
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-  <!-- Bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-    crossorigin="anonymous"></script>
+    <!-- jQuery -->
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+      defer
+    ></script>
+    <!-- Bootstrap -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+      crossorigin="anonymous"
+      defer
+    ></script>
 
-  <!-- javascript -->
-  <script src="js/script.js"></script>
+    <!-- javascript -->
+    <script src="/js/script.js" defer></script>
 
-  <!-- greensock cdn -->
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script> -->
+    <!-- greensock cdn -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script> -->
 
-  <script type="text/javascript">
-    // Click anywhere to play the audio
-    controlIcon = document.getElementById("control-icon");
-    audio = document.getElementById("bgm");
-    audio.volume = 0.5;
-    document.addEventListener("click", function () {
-      // Toggle play/pause
-      if (audio.paused) {
-        audio.play();
-        controlIcon.innerHTML = '<i class="fa-solid fa-pause"></i>';
-      } else {
-        audio.pause();
-        controlIcon.innerHTML = '<i class="fa-solid fa-play"></i>';
-      }
-    });
+    <script type="text/javascript" defer>
+      // Click anywhere to play the audio
+      controlIcon = document.getElementById("control-icon");
+      audio = document.getElementById("bgm");
+      audio.volume = 0.5;
+      document.addEventListener("click", function () {
+        // Toggle play/pause
+        if (audio.paused) {
+          audio.play();
+          controlIcon.innerHTML = '<i class="fa-solid fa-pause"></i>';
+        } else {
+          audio.pause();
+          controlIcon.innerHTML = '<i class="fa-solid fa-play"></i>';
+        }
+      });
 
-    new WOW().init();
-  </script>
-</body>
-
+      new WOW().init();
+    </script>
+  </body>
 </html>
