Update og card attribute

--- a/cybersec.html
+++ b/cybersec.html
@@ -13,7 +13,7 @@
   <meta property="og:description" content="Cybersec" />
   <meta property="og:url" content="https://tni-cybersec.github.io" />
 
-  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="TNI Cybersec" />
   <meta name="twitter:image" content="/img/CyberPic.jpg" />
   <meta name="twitter:description" content="Cybersec" />
