--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     content="We study & cyber research to watch out for new threats and expand on new knowledge in the cybersec." />
   <meta property="og:url" content="https://tni-cybersec.github.io" />
 
-  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="TNI Cybersec" />
   <meta name="twitter:image" content="/img/CyberPic.jpg" />
   <meta name="twitter:description"
