--- a/activities.html
+++ b/activities.html
@@ -20,7 +20,7 @@
   <meta property="og:description" content="Activities" />
   <meta property="og:url" content="https://tni-cybersec.github.io" />
 
-  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="TNI Cybersec" />
   <meta name="twitter:image" content="/img/CyberPic.jpg" />
   <meta name="twitter:description" content="Activities" />
