--- a/landing.html
+++ b/landing.html
@@ -48,7 +48,7 @@
   <script src="js/wow.min.js"></script>
 
   <!-- CountAPI -->
-  <script async src="https://api.countapi.xyz/hit/tni-cybersec.github.io/landing"></script>
+  <!-- <script async src="https://api.countapi.xyz/hit/tni-cybersec.github.io/landing"></script> -->
 </head>
 
 <body>
