--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <script src="js/wow.min.js"></script>
 
   <!-- CountAPI -->
-  <script async src="https://api.countapi.xyz/hit/tni-cybersec.github.io/visits"></script>
+  <!-- <script async src="https://api.countapi.xyz/hit/tni-cybersec.github.io/visits"></script> -->
 </head>
 
 <body>
