--- a/common/footer.html
+++ b/common/footer.html
@@ -8,27 +8,43 @@
       </div>
     </div>
 
-    <br>
+    <br />
 
     <div class="hr">
       <div class="row"></div>
     </div>
 
-    <br>
+    <br />
 
     <div class="info">
       <div class="row">
         <div class="col-md-4" id="personal">
           <h5 class="wow fadeInUp footer" data-wow-delay="0.1s">
             <span id="brand" class="logo">
-              <img rel="preload" as="image" width="auto" height="55" src="img/TNICyberWeb.png"
-                onclick="location.href='badapple.html'" />
-              <img rel="preload" as="image" width="auto" height="55" src="img/TNIIcon.png"
-                onclick="location.href='badapple.html'" />
+              <img
+                rel="preload"
+                as="image"
+                width="auto"
+                height="55"
+                src="img/TNICyberWeb.png"
+                onclick="location.href='badapple.html'"
+              />
+              <img
+                rel="preload"
+                as="image"
+                width="auto"
+                height="55"
+                src="img/TNIIcon.png"
+                onclick="location.href='badapple.html'"
+              />
             </span>
           </h5>
-          <p class="wow fadeInUp list badge badge-pill circleScaleBtn2" type="button" data-wow-delay="0.2s"
-            onclick="window.open('https://creativecommons.org/licenses/by/4.0/')">
+          <p
+            class="wow fadeInUp list badge badge-pill circleScaleBtn2"
+            type="button"
+            data-wow-delay="0.2s"
+            onclick="window.open('https://creativecommons.org/licenses/by/4.0/')"
+          >
             <i class="fab fa-creative-commons"></i>
             <i class="fab fa-creative-commons-by"></i>
             <i class="fab fa-creative-commons-share"></i>
@@ -36,9 +52,17 @@
         </div>
 
         <div class="col-md-8" id="media">
-          <ul>
-            <li class="wow fadeInUp" data-wow-delay="0.3s" data-toggle="modal" data-target="#social">
-              <p class="wow fadeInUp list1 badge badge-pill badge-light circleScaleBtn2" type="button">
+          <ul class="mb-2">
+            <li
+              class="wow fadeInUp"
+              data-wow-delay="0.3s"
+              data-toggle="modal"
+              data-target="#social"
+            >
+              <p
+                class="wow fadeInUp list1 badge badge-pill badge-light circleScaleBtn2 mb-0"
+                type="button"
+              >
                 <i class="fab fa-facebook-messenger"></i>
                 <i class="fab fa-facebook"></i>
                 <i class="fab fa-discord"></i>
@@ -49,9 +73,20 @@
                 <i class="fa-solid fa-envelope"></i>
               </p>
             </li>
+            <div class="wow fadeInUp mt-0" data-wow-delay="0.35s">
+              <a href="https://hits.seeyoufarm.com" target="_blank">
+                <img
+                  src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Ftni-cybersec.github.io&count_bg=%23212121&title_bg=%23414141&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"
+                />
+              </a>
+            </div>
           </ul>
-          <p class="wow fadeInUp list2 badge badge-pill badge-light circleScaleBtn2" type="button" data-wow-delay="0.4s"
-            onclick="location.href='termsofservice.html'">
+          <p
+            class="wow fadeInUp list2 badge badge-pill badge-light circleScaleBtn2"
+            type="button"
+            data-wow-delay="0.4s"
+            onclick="location.href='termsofservice.html'"
+          >
             <i class="fas fa-info-circle"></i> Terms of Service
           </p>
         </div>
