Changes to be committed:Fix UI/UX api/count 	modified:   common/footer.html

--- a/common/footer.html
+++ b/common/footer.html
@@ -50,13 +50,14 @@
               </p>
             </li>
           </ul>
-          <p class="wow fadeInUp list2 badge badge-pill badge-light circleScaleBtn2 mb-0" type="button" data-wow-delay="0.4s"
-            onclick="location.href='termsofservice.html'">
+          <p class="wow fadeInUp list2 badge badge-pill badge-light circleScaleBtn2 mb-0" type="button"
+            data-wow-delay="0.4s" onclick="location.href='termsofservice.html'">
             <i class="fas fa-info-circle"></i> Terms of Service
           </p>
-          <p class="wow fadeInUp list2 badge badge-pill badge-light circleScaleBtn2 mb-0" type="button" data-wow-delay="0.4s">
-            <a href="https://hits.seeyoufarm.com" target="_blank">
-              <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Ftni-cybersec.github.io&count_bg=%23414141&title_bg=%23414141&icon=&icon_color=%23E7E7E7&title=🔥Hist&edge_flat=false" />
+          <p class="wow fadeInUp list2 badge badge-pill badge-light circleScaleBtn2 mb-0" type="button"
+            data-wow-delay="0.4s" onclick="window.open('https://hits.seeyoufarm.com')">
+            <img
+              src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Ftni-cybersec.github.io&count_bg=%23414141&title_bg=%23414141&icon=&icon_color=%23E7E7E7&title=🔥Hist&edge_flat=false" />
             </a>
           </p>
         </div>
