--- a/common/footer.html
+++ b/common/footer.html
@@ -57,7 +57,7 @@
           <p class="wow fadeInUp list2 badge badge-pill badge-light circleScaleBtn2 mb-0" type="button"
             data-wow-delay="0.4s" onclick="window.open('https://hits.seeyoufarm.com')">
             <img
-              src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Ftni-cybersec.github.io&count_bg=%23414141&title_bg=%23414141&icon=&icon_color=%23E7E7E7&title=🔥Hist&edge_flat=false" />
+              src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Ftni-cybersec.github.io&count_bg=%23414141&title_bg=%23414141&icon=&icon_color=%23E7E7E7&title=🔥Hits&edge_flat=true" />
             </a>
           </p>
         </div>
