Changes to be committed:HPNY 2024 Update!!! 	renamed:    e/HPNY.html -> HPNY.html 	modified:   common/footer.html 	modified:   index.html 	modified:   landing.html

--- a/common/footer.html
+++ b/common/footer.html
@@ -22,7 +22,7 @@
           <h5 class="wow fadeInUp footer" data-wow-delay="0.1s">
             <span id="brand" class="logo">
               <img rel="preload" as="image" width="auto" height="55" src="img/TNICyberWeb.png"
-                onclick="location.href='badapple.html'" />
+                onclick="location.href='HPNY.html'" />
               <img rel="preload" as="image" width="auto" height="55" src="img/TNIIcon.png"
                 onclick="location.href='badapple.html'" />
             </span>
