--- a/valentine.html
+++ b/valentine.html
@@ -105,7 +105,7 @@
     <!--------------- hero section starts here --------------->
     <audio autoplay loop id="player">
       <source src="video/utada_hikaru_first_love.mp4" type="video/mp4" />
-      Your browser does not support HTML5 video.
+      ❗Your browser does not support HTML5 video.
     </audio>
 
     <div rel="preload" as="image" class="bg wow bounceIn">
