--- a/activities.html
+++ b/activities.html
@@ -320,7 +320,7 @@
           $(document).ready(function () {
             $("#load_data").ready(function () {
               $.ajax({
-                url: "https://docs.google.com/spreadsheets/d/e/2PACX-1vSr8JPhbKLmrSPOJRW92ZiJsqnSjCjrJH0iNOiZjLeHdlq1x-Ws90jkvbNK9gbawwG_1DpL_3LBTJus/pub?gid=0&single=true&output=csv",
+                url: "https://docs.google.com/spreadsheets/d/e/2PACX-1vR2F-7EB0fJuUD_PXbq9WUkWSmaChbKxvDkCvYjMPN8K_k1OJjEYOA5EB_JWylmmg/pubhtml",
                 dataType: "text",
 
                 success: function (data) {
