Changes to be committed:Fix Landing 	modified:   landing.html

--- a/landing.html
+++ b/landing.html
@@ -63,6 +63,7 @@
     <div id="navigation"></div>
     <!--------------- navbar ends here --------------->
 
+    <!--
       <div class="snowflakes" aria-hidden="true">
       <div class="snowflake">❆</div>
       <div class="snowflake">❅</div>
@@ -77,6 +78,7 @@
       <div class="snowflake">❆</div>
       <div class="snowflake">❅</div>
     </div>
+    -->
 
     <!--------------- hero section starts here --------------->
     <div rel="preload" as="image" class="bgimg wow fadeInUp black">
@@ -175,7 +177,7 @@
           </h4>
         </div>
 
-        <iframe width="2000px" height="600px" src="https://forms.office.com/r/dN6tpFgfbz?embed=true" frameborder="0"
+        <iframe width="2000px" height="600px" src="https://forms.office.com/r/drM8AcaJd8?embed=true" frameborder="0"
           marginwidth="0" marginheight="0" style="border: none; max-width: 100%; max-height: 100vh">
         </iframe>
         <!-- <iframe width="2000px" height="600px" src="https://forms.office.com/r/dN6tpFgfbz?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen></iframe> -->
