Changes to be committed:Update <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.5.2/css/all.css" /> 	modified:   404.html 	modified:   HPNY.html 	modified:   aboutus.html 	modified:   activities.html 	modified:   badapple.html 	modified:   cybersec.html 	modified:   index.html 	modified:   landing.html 	modified:   stats.html 	modified:   termsofservice.html     modified:   valentine.html

--- a/404.html
+++ b/404.html
@@ -22,10 +22,7 @@
     />
 
     <!-- fontawesome cdns -->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v6.1.1/css/all.css"
-    />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.5.2/css/all.css" />
 
     <!-- google fonts -->
     <link
